# S1972

./: .env.docker.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE_3_SUMMARY.md  PHASE_4A_SUMMARY.md  PHASE_4B_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  README.md  SECURITY.md  SECURITY_FIXES_COMPLETE.md  SENTRY_INITIALIZER_COMPLETE.md  TEST_FIXES_SUMMARY.md  docker-compose.production.yml
saas-boilerplate/backend/: .dockerignore  .env.example  .env.production.example  .pre-commit-config.yaml  Dockerfile  LOAD_TESTING.md  README.md  conftest.py  locustfile.py  pyproject.toml  pytest.ini  schema.yml
saas-boilerplate/backend/apps/accounts/: managers.py  models.py  serializers.py  urls.py
saas-boilerplate/backend/apps/accounts/migrations/: 0001_initial.py  0002_backupcode_updated_at_totpdevice_updated_at_and_more.py  0002_totp_backup_codes.py
saas-boilerplate/backend/apps/accounts/tests/: factories.py  test_models.py
saas-boilerplate/backend/apps/analytics/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
saas-boilerplate/backend/apps/analytics/migrations/: 0001_initial.py
saas-boilerplate/backend/apps/analytics/tests/: test_views.py
saas-boilerplate/backend/apps/api/: schema.py  urls.py
saas-boilerplate/backend/apps/authentication/: adapters.py  oauth_serializers.py  oauth_urls.py  oauth_views.py  serializers.py  services.py  totp_serializers.py  totp_urls.py  totp_views.py  urls.py  utils.py  views.py
saas-boilerplate/backend/apps/authentication/tests/: test_2fa.py  test_api.py  test_auth.py  test_authentication_comprehensive.py
saas-boilerplate/backend/apps/billing/: models.py  urls.py  webhooks.py
saas-boilerplate/backend/apps/billing/migrations/: 0001_initial.py
saas-boilerplate/backend/apps/core/: exceptions.py  fields.py  middleware.py  models.py  pagination.py  sentry.py  services.py  tasks.py  urls.py  utils.py  views.py
saas-boilerplate/backend/apps/core/middleware/: security.py
saas-boilerplate/backend/apps/core/tests/: test_health_checks.py
saas-boilerplate/backend/apps/invitations/: models.py  serializers.py  services.py  urls.py  views.py
saas-boilerplate/backend/apps/invitations/migrations/: 0001_initial.py
saas-boilerplate/backend/apps/mfa/: serializers.py  urls.py  views.py
saas-boilerplate/backend/apps/notifications/: models.py  serializers.py  tasks.py  tests.py  views.py
saas-boilerplate/backend/apps/notifications/migrations/: 0001_initial.py  0002_notification_updated_at_alter_notification_id.py
saas-boilerplate/backend/apps/organizations/: invitations.py  models.py  permissions.py  serializers.py  urls.py  views.py
saas-boilerplate/backend/apps/subscriptions/: models.py  serializers.py  services.py  urls.py  views.py  webhooks.py
saas-boilerplate/backend/apps/two_factor/: apps.py  models.py  serializers.py  urls.py  views.py
saas-boilerplate/backend/config/: api_docs.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
saas-boilerplate/backend/config/settings/: api_docs.py  base.py  development.py  production.py  test.py
saas-boilerplate/backend/load_tests/: README.md  locustfile.py
saas-boilerplate/backend/templates/emails/: base.html  invitation.html  invitation.txt  password_reset.html  password_reset.txt  verify_email.html  verify_email.txt  welcome.html
saas-boilerplate/backend/tests/: conftest.py  factories.py  test_auth.py  test_organizations.py
saas-boilerplate/backend/tests/api/: test_auth_api.py  test_organizations_api.py
(+244 files in other folders)
