[project]
name = "saas-boilerplate"
version = "0.1.0"
description = "Django SaaS Boilerplate"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "django-allauth>=0.61",
    "django-filter>=24.1",
    "celery>=5.4",
    "redis>=5.0",
    "stripe>=8.0",
    "psycopg2-binary>=2.9",
    "gunicorn>=21.2",
    "uvicorn>=0.27",
    "sentry-sdk>=1.40",
    "dj-database-url>=2.1",
    "drf-nested-routers>=0.93.5",
    "drf-spectacular>=0.27.1",
    "pytest-django>=4.8.0",
    "factory-boy>=3.3.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]
